# maniray

./: CMakeLists.txt
include/glad/: gl.h
include/maniray/compute/: manifold.h  octree.h
include/maniray/display/: camera.h  engine.h  misc.h  program.h  shader.h  storage_buffer.h  uniform_buffer.h  window.h  window_internal.h
include/maniray/utils/: dyn_array.h  mem_pool.h  misc.h  types.h  xmalloc.h
shaders/: display.frag  display.vert  experiment_plane.comp  experiment_space.comp  octree_slice.comp  octree_space_test.comp  opt_methods1_graph.comp  vector_field_plane.comp  vector_field_space.comp
src/: CMakeLists.txt  main.c
src/compute/: CMakeLists.txt  manifold.c  octree.c
src/display/: CMakeLists.txt  camera.c  engine.c  program.c  shader.c  storage_buffer.c  uniform_buffer.c  window.c
src/utils/: CMakeLists.txt  dyn_array.c  mem_pool.c  xmalloc.c
